deployment code, treat each timer as a separate PWA app

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,18 +4,18 @@
     "description": "A poker tournament time than can easily shared between players in a game.",
     "icons": [
     {
-      "src": "/assets/logo_192.png",
+      "src": "/logo_192.png",
       "type": "image/png",
       "sizes": "192x192"
     },
     {
-      "src": "/assets/logo_512.png",
+      "src": "/logo_512.png",
       "type": "image/png",
       "sizes": "512x512",
       "purpose": "any"
     },
     {
-      "src": "/assets/logo_512.png",
+      "src": "/logo_512.png",
       "type": "image/png",
       "sizes": "any",
       "purpose": "any"
@@ -28,6 +28,7 @@
     "background_color": "#ffffff",
     "dir": "ltr",
     "lang": "en",
-    "orientation": "portrait"
+    "start_url": "/",
+    "scope": "/"
   }
   
