--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,7 +13,7 @@ axum = { version = "0.7", features = ["ws"], optional = true }
 console_error_panic_hook = { version = "0.1", optional = true }
 leptos_axum = { version = "0.7.0", optional = true }
 leptos_meta = { version = "0.7.0" }
-tokio = { version = "1", features = ["rt-multi-thread"], optional = true }
+tokio = { version = "1", features = ["signal", "rt-multi-thread"], optional = true }
 wasm-bindgen = { version = "=0.2.100", optional = true }
 leptos-use = { version = "0.15.7", features = ["storage"] }
 codee = { version = "0.3.0", features = ["json_serde_wasm"] }
