--- a/Cargo.toml
+++ b/Cargo.toml
@@ -26,7 +26,8 @@ chrono = { version = "0.4", features = ["serde"] }
 urlencoding = "2.1.3"
 log = "0.4.26"
 js-sys = "0.3.77"
-web-sys = "0.3.77"
+web-sys = { version = "0.3.77", features = ["PushManager","PushSubscriptionOptionsInit", "PushSubscription","PushSubscriptionJson"]}
+wasm-bindgen-futures = "0.4.50"
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 uuid = { version = "1.16", features = ["serde", "v4"] }
