--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,7 +14,6 @@ console_error_panic_hook = { version = "0.1", optional = true }
 leptos_axum = { version = "0.7.0", optional = true }
 leptos_meta = { version = "0.7.0" }
 tokio = { version = "1", features = ["signal", "rt-multi-thread"], optional = true }
-wasm-bindgen = { version = "=0.2.100", optional = true }
 leptos-use = { version = "0.15.7", features = ["storage"] }
 codee = { version = "0.3.0", features = ["json_serde_wasm"] }
 serde = "1.0.219"
@@ -25,9 +24,11 @@ lazy-regex = "3.4.1"
 chrono = { version = "0.4", features = ["serde"] }
 urlencoding = "2.1.3"
 log = "0.4.26"
-js-sys = "0.3.77"
+js-sys = { version = "0.3.77", optional = false }
 web-sys = { version = "0.3.77", features = ["PushManager","PushSubscriptionOptionsInit", "PushSubscription","PushSubscriptionJson"]}
-wasm-bindgen-futures = "0.4.50"
+wasm-bindgen = { version = "=0.2.100", optional = false }
+wasm-bindgen-futures = {version = "0.4.50"}
+console_log = { version = "1.0.0", optional = true }
 
 [target.'cfg(not(target_arch = "wasm32"))'.dependencies]
 uuid = { version = "1.16", features = ["serde", "v4"] }
@@ -44,10 +45,14 @@ env_logger = "0.11.7"
 
 [target.'cfg(target_arch = "wasm32")'.dependencies]
 uuid = { version = "1.16", features = ["serde", "v4", "std", "rng", "js"] }
-console_log = "1.0.0"
 
 [features]
-hydrate = ["leptos/hydrate", "dep:console_error_panic_hook", "dep:wasm-bindgen"]
+hydrate = [
+    "leptos/hydrate", 
+    "dep:console_error_panic_hook", 
+    "dep:console_log", 
+]
+
 ssr = [
     "dep:axum",
     "dep:tokio",
@@ -55,7 +60,7 @@ ssr = [
     "leptos/ssr",
     "leptos_meta/ssr",
     "leptos_router/ssr",
-    "leptos-use/ssr",
+    "leptos-use/ssr"
 ]
 
 # Defines a size-optimized profile for the WASM bundle in release mode
